Added AdvancedPaperCommand & reformatted code & reworked java-docs